--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,4 +7,6 @@ requires-python = ">=3.12"
 dependencies = [
     "dotenv>=0.9.9",
     "openai>=2.14.0",
+    "requests>=2.32.5",
+    "tavily-python>=0.7.17",
 ]
