--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,11 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "dotenv>=0.9.9",
+    "neo4j>=6.1.0",
+    "numpy>=2.4.1",
     "openai>=2.14.0",
     "pypinyin>=0.55.0",
+    "qdrant-client>=1.16.2",
     "requests>=2.32.5",
     "tavily-python>=0.7.17",
 ]
