--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,5 +12,6 @@ dependencies = [
     "pypinyin>=0.55.0",
     "qdrant-client>=1.16.2",
     "requests>=2.32.5",
+    "spacy>=3.8.11",
     "tavily-python>=0.7.17",
 ]
