--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "neo4j>=6.1.0",
     "numpy>=2.4.1",
     "openai>=2.14.0",
+    "pip>=25.3",
     "pypinyin>=0.55.0",
     "qdrant-client>=1.16.2",
     "requests>=2.32.5",
