--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,8 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "dotenv>=0.9.9",
+    "langdetect>=1.0.9",
+    "markitdown>=0.1.4",
     "neo4j>=6.1.0",
     "numpy>=2.4.1",
     "openai>=2.14.0",
